--- a/LiveInLife/app/src/main/res/layout/activity_main.xml
+++ b/LiveInLife/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,13 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".MainActivity">
 
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Get Venue Test"
+        android:id="@+id/button_get_venue"
+        android:layout_above="@+id/button_posting"
+        android:onClick="getVenues"/>
 
     <Button
         android:layout_width="match_parent"
