--- a/LiveInLife/app/src/main/res/layout/activity_posting.xml
+++ b/LiveInLife/app/src/main/res/layout/activity_posting.xml
@@ -1,4 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    >
+
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -64,12 +71,63 @@
         android:layout_marginTop="20dp"
         android:layout_alignParentLeft="true" />
 
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Zip Code"
+        android:ems="10"
+        android:id="@+id/edit_zip_code"
+        android:layout_below="@id/edit_province"
+        android:layout_marginTop="20dp"
+        android:layout_alignParentLeft="true" />
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Price"
+        android:ems="10"
+        android:id="@+id/edit_price"
+        android:layout_below="@id/edit_zip_code"
+        android:layout_marginTop="20dp"
+        android:layout_alignParentLeft="true" />
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Bedrooms"
+        android:ems="10"
+        android:id="@+id/edit_bedrooms"
+        android:layout_below="@id/edit_price"
+        android:layout_marginTop="20dp"
+        android:layout_alignParentLeft="true" />
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Sq. Feet"
+        android:ems="10"
+        android:id="@+id/edit_sqfeet"
+        android:layout_below="@id/edit_bedrooms"
+        android:layout_marginTop="20dp"
+        android:layout_alignParentLeft="true" />
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Post Description"
+        android:ems="10"
+        android:id="@+id/edit_description"
+        android:layout_below="@id/edit_sqfeet"
+        android:layout_marginTop="20dp"
+        android:layout_alignParentLeft="true" />
+
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Make a Posting"
         android:id="@+id/button_posting"
-        android:layout_alignParentBottom="true"
+        android:layout_below="@id/edit_description"
         android:onClick="sendPosting"/>
 
 </RelativeLayout>
+</ScrollView>
