--- a/LiveInLife/app/src/main/res/layout/activity_city_info.xml
+++ b/LiveInLife/app/src/main/res/layout/activity_city_info.xml
@@ -1,27 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="fill_parent"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:background="@color/white"
-    tools:context=".MainActivity">
+    tools:context="com.company.samsalvail.liveinlife.CityInfoActivity">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="LiveInLife"
         android:textAlignment="center"
         android:textSize="52sp"
         android:fontFamily="sans-serif-black"
         android:textColor="@color/colorPrimary"
-        android:id="@+id/title"
+        android:id="@+id/text_title_city"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="42dp" />
@@ -30,40 +26,27 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Love Your Life, Live In Life"
         android:textAlignment="center"
         android:textSize="34sp"
         android:fontFamily="sans-serif-black"
         android:textColor="@color/colorPrimary"
-        android:id="@+id/sub_title"
-        android:layout_below="@id/title"
+        android:id="@+id/text_weather"
+        android:layout_below="@id/text_title_city"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="42dp" />
 
     <Button
         android:layout_width="270dp"
-        android:layout_height="wrap_content"
-        android:textColor="@color/colorPrimary"
-        android:layout_centerInParent="true"
-        android:background="@drawable/buttonshape"
-        android:text="Find Places"
-        android:textSize="20sp"
-        android:id="@+id/button_get_venue"
-        android:layout_above="@+id/button_posting"
-        android:layout_marginBottom="@dimen/fab_margin"
-        android:onClick="getVenues"/>
-
-    <Button
-        android:layout_width="270dp"
         android:layout_centerInParent="true"
         android:layout_height="wrap_content"
         android:background="@drawable/buttonshape"
         android:textColor="@color/colorPrimary"
-        android:text="Make a Posting"
+        android:text="Get Listings in this City"
         android:textSize="20sp"
-        android:id="@+id/button_posting"
+        android:id="@+id/button_get_listing"
         android:layout_alignParentBottom="true"
-        android:onClick="launchPosting"/>
+        android:onClick="launchListings"/>
+
 
 
 </RelativeLayout>
