--- a/LiveInLife/app/src/main/res/layout/activity_posting.xml
+++ b/LiveInLife/app/src/main/res/layout/activity_posting.xml
@@ -4,6 +4,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+    android:background="@color/white"
     >
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -27,14 +28,19 @@
     <ImageView
         android:id="@+id/img"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/fab_margin">
     </ImageView>
 
     <Button
         android:id="@+id/button_select_picture"
-        android:layout_width="wrap_content"
+        android:layout_width="135dp"
         android:layout_height="wrap_content"
         android:text="Select Picture"
+        android:background="@drawable/buttonshape"
+        android:textColor="@color/colorPrimary"
+        android:textSize="16sp"
+        android:layout_centerInParent="true"
         android:layout_below="@id/img"
         android:layout_gravity="center"
         android:onClick="selectPicture"
@@ -46,6 +52,7 @@
         android:layout_height="wrap_content"
         android:hint="Address"
         android:ems="10"
+        android:singleLine="true"
         android:id="@+id/edit_address"
         android:layout_below="@id/button_select_picture"
         android:layout_marginTop="20dp"
@@ -56,7 +63,8 @@
         android:layout_height="wrap_content"
         android:hint="City"
         android:ems="10"
-        android:id="@+id/edit_city"
+        android:singleLine="true"
+        android:id="@+id/edit_enter_city"
         android:layout_below="@id/edit_address"
         android:layout_marginTop="20dp"
         android:layout_alignParentLeft="true" />
@@ -66,8 +74,9 @@
         android:layout_height="wrap_content"
         android:hint="Province"
         android:ems="10"
+        android:singleLine="true"
         android:id="@+id/edit_province"
-        android:layout_below="@id/edit_city"
+        android:layout_below="@id/edit_enter_city"
         android:layout_marginTop="20dp"
         android:layout_alignParentLeft="true" />
 
@@ -76,6 +85,7 @@
         android:layout_height="wrap_content"
         android:hint="Zip Code"
         android:ems="10"
+        android:singleLine="true"
         android:id="@+id/edit_zip_code"
         android:layout_below="@id/edit_province"
         android:layout_marginTop="20dp"
@@ -86,6 +96,8 @@
         android:layout_height="wrap_content"
         android:hint="Price"
         android:ems="10"
+        android:singleLine="true"
+        android:inputType="numberDecimal"
         android:id="@+id/edit_price"
         android:layout_below="@id/edit_zip_code"
         android:layout_marginTop="20dp"
@@ -95,6 +107,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Bedrooms"
+        android:singleLine="true"
+        android:inputType="number"
         android:ems="10"
         android:id="@+id/edit_bedrooms"
         android:layout_below="@id/edit_price"
@@ -106,6 +120,8 @@
         android:layout_height="wrap_content"
         android:hint="Sq. Feet"
         android:ems="10"
+        android:singleLine="true"
+        android:inputType="numberDecimal"
         android:id="@+id/edit_sqfeet"
         android:layout_below="@id/edit_bedrooms"
         android:layout_marginTop="20dp"
@@ -122,11 +138,16 @@
         android:layout_alignParentLeft="true" />
 
     <Button
-        android:layout_width="match_parent"
+        android:layout_width="270dp"
         android:layout_height="wrap_content"
         android:text="Make a Posting"
         android:id="@+id/button_posting"
         android:layout_below="@id/edit_description"
+        android:background="@drawable/buttonshape"
+        android:textColor="@color/colorPrimary"
+        android:textSize="20sp"
+        android:layout_centerInParent="true"
+        android:layout_marginTop="@dimen/fab_margin"
         android:onClick="sendPosting"/>
 
 </RelativeLayout>
