--- a/LiveInLife/app/src/main/res/layout/activity_venue_list_view.xml
+++ b/LiveInLife/app/src/main/res/layout/activity_venue_list_view.xml
@@ -1,27 +1,47 @@
-<?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/activity_expandable_scroll_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".VenueListViewActivity">
+    android:fillViewport="true">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="25sp"
-        android:textStyle="bold"
-        android:text="Our Listing" />
+    <RelativeLayout
+        android:id="@+id/LinearLayout1"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin">
 
-    <ExpandableListView
-        android:id="@+id/expandableListView"
-        android:layout_below="@id/textView"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent" >
-    </ExpandableListView>
 
-</RelativeLayout>
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="25sp"
+            android:textStyle="bold"
+            android:text="Our Listings" />
+
+        <Button
+            android:layout_width="270dp"
+            android:layout_centerInParent="true"
+            android:layout_height="wrap_content"
+            android:background="@drawable/buttonshape"
+            android:textColor="@color/colorPrimary"
+            android:text="Find More Places"
+            android:textSize="20sp"
+            android:id="@+id/button_find_more"
+            android:layout_below="@+id/expandableListView"
+            android:onClick="getVenues"/>
+
+        <ExpandableListView
+            android:id="@+id/expandableListView"
+            android:layout_below="@id/textView"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:groupIndicator="@null" >
+        </ExpandableListView>
+
+    </RelativeLayout>
+</ScrollView>
