--- a/LiveInLife/app/src/main/res/layout/listing_group.xml
+++ b/LiveInLife/app/src/main/res/layout/listing_group.xml
@@ -12,15 +12,19 @@
     <TextView
         android:id="@+id/text_address"
         android:layout_width="wrap_content"
+        android:paddingTop="@dimen/fab_margin"
+        android:textSize="@dimen/text_size"
         android:layout_height="wrap_content"
-        android:textColor="#000066"
+        android:textColor="@color/colorDark"
         />
     <TextView
         android:id="@+id/text_city"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/text_address"
-        android:textColor="#000066"
+        android:textSize="@dimen/text_size"
+        android:textColor="@color/colorDark"
+        android:paddingBottom="@dimen/fab_margin"
         />
     <TextView
         android:id="@+id/text_province"
@@ -28,7 +32,18 @@
         android:layout_height="wrap_content"
         android:layout_toRightOf="@id/text_city"
         android:layout_below="@id/text_address"
-        android:textColor="#000066"
+        android:textSize="@dimen/text_size"
+        android:textColor="@color/colorDark"
+        android:paddingBottom="@dimen/fab_margin"
+        />
+    <TextView
+        android:id="@+id/text_price"
+        android:paddingTop="@dimen/fab_margin"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="@dimen/text_size"
+        android:layout_alignParentRight="true"
+        android:textColor="@color/colorDark"
         />
 
 </RelativeLayout>
