--- a/LiveInLife/app/src/main/res/values/colors.xml
+++ b/LiveInLife/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="colorDark">#616161</color>
+    <color name="colorLight">#5C6BC0</color>
+    <color name="white">#FFFFFF</color>
 </resources>
